# attested_capital

./: .dockerignore  .gitignore  to_do_alpha.md
.github/workflows/: build-images.yml
boot-agent/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
boot-agent/src/: config.ts  index.ts
docs/: AGENT_REGISTRATION_SYSTEM.md  ARCHITECTURE.md  AUTONOMOUS_BUILD_PLAN.md  BUILD_PLAN_FUND_MANAGER.md  BUILD_PLAN_GUARDIAN.md  DECISIONS_CONFIRMED.md  GUARDIAN_NETWORK.md  HOT_STANDBY_BACKUP_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  NFT_STAKING_BUILD_PLAN.md  README.md  SOLANA_SOURCE_OF_TRUTH.md  START_HERE.md  STRATEGIES.md  autonomous_launch_problems.md
docs/phase1_finsh/: APPROVED_MEASUREMENTS_EXPLAINED.md  EXECUTIVE_SUMMARY.md  FIX_LLM_FALLBACK.md  FIX_VAULT_KEY_PERSISTENCE.md  POST_DEMO_ROADMAP.md  PRIORITIZED_ACTION_PLAN.md  QUICK_ANSWERS_10_ITEMS.md  SECRETAI_ONLY_RESILIENCE.md  TEE_IDENTITY_RESTART_EXPLAINED.md  VAULT_KEY_ROTATION_EXPLAINED.md  WHATS_BUILT_VS_TODO.md  ai-convo0about-status-report.txt  status_report.md  upadatmarch1.md
guardian-network/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
guardian-network/scripts/: test-telegram.ts
panthers-fund/: .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
panthers-fund/src/: index.ts
solana-registry/: Anchor.toml  Cargo.toml  DEPLOY.md  package-lock.json  package.json  program-keypair.json
solana-registry/programs/solana-registry/: Cargo.toml
solana-registry/programs/solana-registry/src/: lib.rs
(+99 files in other folders)
