[package]
name = "solana-registry"
version = "0.1.0"
description = "On-chain discovery registry for Panthers Fund agents and guardians"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
